--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -31,7 +31,7 @@ jobs:
           aws-region: sa-east-1
 
       - name: HashiCorp - Setup Terraform
-        uses: hashicorp/setup-terraform@3.1.2  
+        uses: hashicorp/setup-terraform@v3.1.2  
 
       - name: Terraform Init
         run: terraform init
