--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -37,7 +37,7 @@ jobs:
         run: terraform init
 
       - name: Terraform Validate
-        run: terraform vaalidate
+        run: terraform validate
 
       - name: Terraform Plan
         run: terraform plan  -out=tfplan
