--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -43,8 +43,8 @@ jobs:
         run: terraform plan  -out=tfplan
 
       - name: Terraform Apply 
-        run: terraform apply -auto-approve tfplan
-        if: github.event.input.apply == 'true'
+        run: terraform apply -auto-approve tfplan.tfout
+        if: github.event.inputs.apply == 'true'
 
 
 
