--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -40,7 +40,7 @@ jobs:
         run: terraform validate
 
       - name: Terraform Plan
-        run: terraform plan  -out=tfplan
+        run: terraform plan -out=tfplan.tfout
 
       - name: Terraform Apply 
         run: terraform apply -auto-approve tfplan.tfout
